--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         id: project_properties
         uses: christian-draeger/read-properties@1.1.0
         with:
-          path: gradle.properties
+          path: './gradle.properties'
           properties: 'gradle-version java-version'
 
       # Validate wrapper
