--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 
 java-version = 11
 
-project-group = "net.ngg"
-project-version = "1.0-SNAPSHOT"
+project-group = net.ngg
+project-version = 1.0-SNAPSHOT
 
 gradle-version = 7.5.1
 
-kotlin.code.style=official
+kotlin.code.style = official
