--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,12 +26,12 @@ jobs:
       - name: Fetch Sources
         uses: actions/checkout@v3
       # Read properties
-      - name: Read project properties
-        id: project_properties
-        uses: christian-draeger/read-properties@1.1.0
-        with:
-          path: './gradle.properties'
-          properties: 'gradle-version java-version'
+#      - name: Read project properties
+#        id: project_properties
+#        uses: christian-draeger/read-properties@1.1.0
+#        with:
+#          path: './gradle.properties'
+#          properties: 'gradle-version java-version'
       # Validate wrapper
       - name: Gradle Wrapper Validation
         uses: gradle/wrapper-validation-action@v1.0.4
