--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,30 +22,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Fetch sources
-      - name: Fetch Sources
-        uses: actions/checkout@v3
-      # Read properties
-#      - name: Read project properties
-#        id: project_properties
-#        uses: christian-draeger/read-properties@1.1.0
-#        with:
-#          path: './gradle.properties'
-#          properties: 'gradle-version java-version'
-      # Validate wrapper
-      - name: Gradle Wrapper Validation
-        uses: gradle/wrapper-validation-action@v1.0.4
+    # Fetch sources
+    - name: Fetch Sources
+      uses: actions/checkout@v3
+    # Read properties
+    - name: Read project properties
+      id: project_properties
+      uses: christian-draeger/read-properties@1.1.0
+      with:
+        path: './gradle.properties'
+        properties: 'gradle-version java-version'
+    # Validate wrapper
+    - name: Gradle Wrapper Validation
+      uses: gradle/wrapper-validation-action@v1.0.4
 
-      # Setup Java 11 environment for the next steps
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          java-version: ${{ steps.project_properties.outputs.java-version }}
-          distribution: temurin
+    # Setup Java 11 environment for the next steps
+    - name: Set up JDK
+      uses: actions/setup-java@v3
+      with:
+        java-version: ${{ steps.project_properties.outputs.java-version }}
+        distribution: temurin
 
-      # Build plugin and provide the artifact for the next workflow jobs
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action
-        with:
-          gradle-version: ${{ steps.project_properties.outputs.gradle-version }}
-          arguments: build
+    # Build plugin and provide the artifact for the next workflow jobs
+    - name: Build with Gradle
+      uses: gradle/gradle-build-action
+      with:
+        gradle-version: ${{ steps.project_properties.outputs.gradle-version }}
+        arguments: build
