--- a/.github/workflows/build-gradle.yml
+++ b/.github/workflows/build-gradle.yml
@@ -1,6 +1,6 @@
 # Build workflow
 
-name: Build
+name: Project build
 
 on:
   # Trigger the workflow on pushes to only the 'main' branch (this avoids duplicate checks being run e.g. for dependabot pull requests)
@@ -17,7 +17,7 @@ on:
     branches: ['dev']
 
 jobs:
-  build:
+  gradle:
     name: Build
     runs-on: ubuntu-latest
 
