--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,41 +5,43 @@
 # This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
 
-name: Gradle Package
-
+name: GitHub Packages
 on:
   release:
-    types: [released]
-
+    types: [published]
 jobs:
-  build:
-
+  publish:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
+      # Fetch sources
+      - name: Fetch Sources
+        uses: actions/checkout@v3
+
+      # Validate wrapper
+      - name: Gradle Wrapper Validation
+        uses: gradle/wrapper-validation-action@v1.0.4
+
+      # Read properties
+      - name: Read project properties
+        id: project_properties
+        uses: christian-draeger/read-properties@1.1.0
+        with:
+          path: './gradle.properties'
+          properties: 'gradle-version java-version'
+
+      # Setup JDK
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'temurin'
-          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          settings-path: ${{ github.workspace }} # location for the settings.xml file
+          java-version: ${{ steps.project_properties.outputs.java-version }}
+          distribution: temurin
 
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action
-        with:
-          arguments: build
-
-      # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
-      # the publishing section of your build.gradle
-      - name: Publish to GitHub Packages
-        uses: gradle/gradle-build-action
+      - name: Publish package
+        uses: gradle/gradle-build-action@v2
         with:
           arguments: publish
         env:
-          USERNAME: ${{ github.actor }}
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
