Project properties for publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,26 @@
 # Project properties
 
-java-version = 11
 
 project-group = net.ngg
+project-artifact = ddd-kotlin
 project-version = 1.0-SNAPSHOT
+
+project-name = DDD Kotlin
+project-description = DDD Core in Kotlin
+project-url = https://github.com/ng-galien/ddd-kotlin
+
+project-license-name = MIT
+project-license-url = https://opensource.org/licenses/MIT
+
+project-developer-id = ng-galien
+project-developer-name = Alexandre Boyer
+project-developer-email = nggalien.mail@gmail.com
+
+project-scm-url = https://github.com/ng-galien/ddd-kotlin.git
+project-scm-connection = scm:git:git@github.com:ng-galien/ddd-kotlin.git
+project-scm-developer-connection = scm:git:ssh://git@github.com:ng-galien/ddd-kotlin.git
+
+java-version = 11
 
 gradle-version = 7.5.1
 
