--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,5 +46,5 @@ jobs:
           gradle-version: ${{ steps.project_properties.outputs.gradle-version }}
           arguments: publish
         env:
-          TAG_NAME: ${{ github.ref }}
+          TAG_NAME: ${{ github.ref_name }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
