chore : Sanitize version for package publication

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 # Project properties
 
-
 project-group = net.ngg
 project-artifact = ddd-kotlin
-project-version = 1.0-SNAPSHOT
+# Version is managed by the GitHub Actions workflow
+project-version = 0.0.0
 
 project-name = DDD Kotlin
 project-description = DDD Core in Kotlin
