--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,11 +1,11 @@
-name-template: 'v$RESOLVED_VERSION 🌈'
+name-template: 'v$RESOLVED_VERSION 😎'
 tag-template: 'v$RESOLVED_VERSION'
 categories:
   - title: '🚀 Features'
     labels:
       - 'feature'
       - 'enhancement'
-  - title: '🐛 Bug Fixes'
+  - title: '🪲 Bug Fixes'
     labels:
       - 'fix'
       - 'bugfix'
