--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,12 @@
 # Build workflow
 
 name: Gradle Build
-
+concurrency: build
 on:
   # Trigger the workflow on pushes to only the 'main' branch (this avoids duplicate checks being run e.g. for dependabot pull requests)
   push:
+    branches-ignore:
+      - dev
     paths-ignore:
       - '**/*.md'
       - '**/*.sql'
@@ -14,7 +16,8 @@ on:
       - '**/Dockerfile'
   # Trigger the workflow on any pull request on main
   pull_request:
-    branches: ['dev']
+    branches:
+      - 'dev'
 
 jobs:
   build:
